Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
reactos-bootcd-0.4.15-dev-6712-g46b4b55-x86-gcc-lin-dbg
Use "Zoom" in / out uses "Undo" slots
/srv/buildbot/worker_data/Build_GCCLin_x86/build/base/applications/mspaint/history.cpp(108) : PushImageForUndo: 7 |
while CTRL+Z does not "undo" zooming (but stack on 10 previous undoable actions gets lost)
Attachments
Issue Links
- blocks
-
CORE-19094 mspaint: Refactor and improve Part 2
-
- Resolved
-