[MSPAINT] Zoom tool shouldn't use undo buffer (#5778)

Remove PushImageForUndo call in Zoom tool. CORE-19214